--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
+    "react-lottie-player": "^1.5.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
     "sort-by": "^1.2.0"
