--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-lottie-player": "^1.5.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
