--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-image-magnify": "^2.7.4",
     "react-lottie-player": "^1.5.4",
     "react-query": "^3.39.3",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.14.2",
     "sort-by": "^1.2.0",
     "swiper": "^10.1.0"
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-image-magnify": "^2.7.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
